Crud for book api created

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-API_URL = http://localhost:5232
+PORT=5232
+CONNECTION_STRING=mongodb+srv://sbinayaraj:talAFPtN1cnUzFB8@cluster0.bmbf1.mongodb.net/elib?retryWrites=true&w=majority&appName=Cluster0
+ENV=development
+SECRET_KEY=tHIS IS A SECRET KEY FOR ELIB WEBSITE PROJECT
+CLOUD_NAME=dutfmcfeb
+API_KEY=559495284621771
+API_SECRET=N5uhLB_9pI4IHBytKUTetFPA4pE
+FRONTEND_URL = https://localhost:3000
+DASHBOARD_URL = http://localhost:5173
