--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ API_KEY=559495284621771
 API_SECRET=N5uhLB_9pI4IHBytKUTetFPA4pE
 FRONTEND_URL = https://localhost:3000
 DASHBOARD_URL = http://localhost:5173
+API_URL = https://localhost:3000
