--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
+    "cloudinary": "^2.5.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
