--- a/.env
+++ b/.env
@@ -5,6 +5,4 @@ SECRET_KEY=tHIS IS A SECRET KEY FOR ELIB WEBSITE PROJECT
 CLOUD_NAME=dutfmcfeb
 API_KEY=559495284621771
 API_SECRET=N5uhLB_9pI4IHBytKUTetFPA4pE
-FRONTEND_URL = https://localhost:3000
-DASHBOARD_URL = http://localhost:5173
-API_URL = https://localhost:3000
+WEBSITE_URL = http://localhost:3000
