--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.441.0",
     "next": "14.2.8",
-    "react": "^18",
-    "react-dom": "^18"
+    "query": "^0.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-query": "^3.39.3",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
