middleware added to the project

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SECRET_KEY=tHIS IS A SECRET KEY FOR ELIB WEBSITE PROJECT
 CLOUD_NAME=dutfmcfeb
 API_KEY=559495284621771
 API_SECRET=N5uhLB_9pI4IHBytKUTetFPA4pE
+NODE_ENV= development
