--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^5.55.4",
     "@tanstack/react-query-devtools": "^5.56.2",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/swiper": "^6.0.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
