animation for nav items added

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ CLOUD_NAME=dutfmcfeb
 API_KEY=559495284621771
 API_SECRET=N5uhLB_9pI4IHBytKUTetFPA4pE
 NODE_ENV= development
+TINYMCE_APIKEY = kkelsesauu8p6xmdgy4ih56l23vkgharpxpl93o0l140q7aj
