--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.441.0",
+    "mongoose": "^8.7.2",
     "next": "14.2.8",
     "query": "^0.2.0",
     "react": "^18.3.1",
