--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "@types/swiper": "^6.0.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
@@ -40,6 +41,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
